# Goggle2

./: .clangd  .gitignore  CMakeLists.txt  b.bat  index.html  qrs.txt  server.py
responses/: page-0.txt
src/: answers.html  common.h  extract.c  main.c  sw.html  sw.js  test2.html  websock.js
